--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <body>
     <header class="heading">Random Maze Generator</header>
     <script src="./p5.js"></script>
+    <script src="./Cell.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
